hphp/test/slow/readonly/basesc_cow.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Property c of class Foo must be mutable.' in %s/basesc_cow.hhas:12
%A
